--- a/Styles/AlbumDetail.css
+++ b/Styles/AlbumDetail.css
@@ -1,10 +1,6 @@
 ﻿body {
 }
 
-h1{
-    margin-left: 10px;
-}
-
 .albname{
     font-size: 20px;
 }
@@ -14,7 +10,7 @@ h1{
 }
 
 .albumview{
-    margin: 10px 0 15px 10px;
+    margin: 10px 0 15px 0;
 }
 
 .quantity{
